--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -52,6 +52,7 @@
 .navbar-logo {
   display: flex;
   align-items: center;
+  border:0px;
   gap: 0.3rem;
   font-size: 1.1rem;
   font-weight: 600;
