--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -8,7 +8,7 @@
   box-shadow: 0 2px 8px rgba(0,0,0,0.05);
   position: sticky;
   top: 0;
-  height:50px;
+  min-height:50px;
   padding: 0.6rem 1rem;
   z-index: 1000;
 }
@@ -112,12 +112,12 @@
 
 .notification-badge {
   position: absolute;
-  top: -4px;
+  top:-8px;
   right: -4px;
   background: red;
   color: white;
-  padding: 1px 5px;
-  font-size: 8px;
+  padding: 2px 5px;
+  font-size: 10px;
   border-radius: 50%;
 }
 
@@ -224,6 +224,12 @@
   .icon-button {
     font-size: 1.3rem;
   }
+ 
+}
+
+.company{
+  color:#007bff;
+  font-weight: 650;
 }
 
 /* VERY SMALL MOBILES */
